[package]
name = "minx_server"
version = "0.1.0"
authors = ["fawdlstty <f@fawdlstty.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quiche = { path = "../quiche" }
log = "0.4"
mio = { version = "0.7.0-alpha.1", features = ["os-poll", "udp"] }
env_logger = "0.6"




#
#libc = "0.2"
#ring = "0.16"
#
#[dev-dependencies]
#mio = "0.7"
#env_logger = "0.6"
#docopt = "1"
#
#[profile.bench]
#debug = true
#
#[profile.release]
#debug = true
