[package]
name = "minx_server"
version = "0.1.0"
authors = ["fawdlstty <f@fawdlstty.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
env_logger = "0.6"
log = "0.4"
mio = "0.6"
quiche = { path = "../quiche" }
ring = "0.16"




#mio = { version = "0.7.0-alpha.1", features = ["os-poll", "udp"] }
#libc = "0.2"
#
#
#[dev-dependencies]
#env_logger = "0.6"
#docopt = "1"
#
#[profile.bench]
#debug = true
#
#[profile.release]
#debug = true
