[package]
name = "minx_server"
version = "0.1.0"
authors = ["fawdlstty <f@fawdlstty.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
anyhow = "1.0"
serde = "1.0"
#async-std = "1.5"
#env_logger = "0.6"
#log = "0.4"
#mio = "0.6"
#quiche = "0.2"
#ring = "0.16"
